src/pages/Rentals/Rentals.sass
.rental
  display: flex
  flex-direction: column
  margin-top: 20px
  &__container
    display: flex
    @media (max-width: 768px)
      flex-direction: column
  &__heading
    margin-right: auto
  &__profile-rating
    display: flex
    flex-direction: column
    @media (max-width: 768px)
      flex-direction: row-reverse
      margin-top: 20px
  &__collapses
    display: flex
    flex-wrap: wrap
    gap: 0 76px
    margin-top: 24px
    @media (max-width: 768px)
      margin-top: 15px
  &__title
    font-size: 36px
    font-weight: 500
    color: $primary-color
    margin: 10px 0 5px 0
    @media (max-width: 576px)
      font-size: 18px
      margin: 0 0 10px 0
  &__location
    margin: 0
    font-size: 18px
    color: $primary-color
    @media (max-width: 576px)
      font-size: 14px
  &__tags
    margin-top: 25px
    @media (max-width: 576px)
      margin-top: 10px
  &__tag
    padding: 5px 30px
    border-radius: 10px
    font-size: 14px
    color: white
    background-color: $primary-color
    &:not(:last-child)
      margin-right: 10px
    @media (max-width: 576px)
      font-size: 10px
      padding: 3px 25px

